--- a/index.html
+++ b/index.html
@@ -4,8 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+    <header class="header">
+        <div>
+          <img src="./images/logo.svg" alt="" />
+        </div>
+          <nav>
+          <div>
+            <ul class="list-nav">
+            <li>Home</li>
+            <li>New</li>
+            <li>Popular</li>
+            <li>Trending</li>
+            <li>Categories</li>
+          </ul>
+          </div>
+        </nav>
     
+        
+      </header>
+      <section>
+<div class="content">
+    <div class="left-content">
+        <div class="image"><img src="./images/image-web-3-desktop.jpg"></div>
+        <div class="image-content">
+            <div class="image-head">  <h1>The Bright Future of Web 3.0?</h1></div>
+            <div class="image-desc"> <p>
+                We dive into the next evolution of the web that claims to put the
+                power of the platforms back into the hands of the people. But is
+                it really fulfilling its promise?
+              </p></div>
+        </div>
+    </div>
+    <div class="right-content">
+        <p>tugstugadyugwoyuuuuuuuydgeyeeeeeeeeeeeeeeeeeeeeeeeeeeeee</p>
+    </div>
+</div>
+      </section>
+      <footer>
+
+      </footer>
+      </div>
 </body>
 </html>
