updated html code and styles

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@700;800&family=Rubik&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
@@ -31,16 +34,32 @@
     <div class="left-content">
         <div class="image"><img src="./images/image-web-3-desktop.jpg"></div>
         <div class="image-content">
+         
             <div class="image-head">  <h1>The Bright Future of Web 3.0?</h1></div>
             <div class="image-desc"> <p>
                 We dive into the next evolution of the web that claims to put the
                 power of the platforms back into the hands of the people. But is
                 it really fulfilling its promise?
-              </p></div>
+              </p>
+              <button>Read more</button></div>
         </div>
     </div>
     <div class="right-content">
-        <p>tugstugadyugwoyuuuuuuuydgeyeeeeeeeeeeeeeeeeeeeeeeeeeeeee</p>
+      <h1>New</h1>
+      <h3>Hydrogen VS Electric Cars</h3>
+      <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+      <hr>
+      <h3>The Downsides of AI Artistry</h3>
+          <p>
+            What are the possible adverse effects of on-demand AI image
+            generation?
+          </p>
+          <hr>
+          <h3>Is VC Funding Drying Up?</h3>
+          <p>
+            Private funding by VC firms is down 50% YOY. We take a look at what
+            that means.
+          </p>
     </div>
 </div>
       </section>
